# azcam-mods

./: README.md  pyproject.toml
azcam_mods/: console.py  detector_mods.py  mods.py  server.py
support/: parameters_monitor_mods.ini  start_console_mods.bat  start_console_mods.py  start_monitor_mods.bat  start_server_mods.bat  start_server_mods.py
